RESOLVED FIXED Bug 32175
REGRESSION: websocket/tests/url-parsing.html is crashing on Leopard Bot
https://bugs.webkit.org/show_bug.cgi?id=32175
Summary REGRESSION: websocket/tests/url-parsing.html is crashing on Leopard Bot
Eric Seidel (no email)
Reported 2009-12-04 15:13:22 PST
Attachments
proposed fix (1.77 KB, patch)
2009-12-04 16:43 PST, Alexey Proskuryakov
eric: review+
Alexey Proskuryakov
Comment 1 2009-12-04 16:12:33 PST
I do sometimes get this assertion on Leopard, but never on SnowLeopard.
Darin Adler
Comment 2 2009-12-04 16:13:11 PST
Makes it sound like a CFNetwork bug.
Alexey Proskuryakov
Comment 3 2009-12-04 16:43:01 PST
Created attachment 44340 [details] proposed fix I think it's just a change in behavior in CFNetwork, not a bug. The fix is a little heavy-handed, as there is no need to call CFWriteStreamClose(), and probably no need to unschedule the read stream. But it seems to work fine in my testing.
Alexey Proskuryakov
Comment 4 2009-12-04 16:44:23 PST
*** Bug 32091 has been marked as a duplicate of this bug. ***
WebKit Review Bot
Comment 5 2009-12-04 16:48:16 PST
style-queue ran check-webkit-style on attachment 44340 [details] without any errors.
Eric Seidel (no email)
Comment 6 2009-12-05 13:05:57 PST
Comment on attachment 44340 [details] proposed fix OK. Here's hoping it stops the crashes. :)
Alexey Proskuryakov
Comment 7 2009-12-05 15:59:38 PST
Committed revision 51732.
Note You need to log in before you can comment on or make changes to this bug.