        Reviewed by Eric Seidel.

https://bugs.webkit.org/show_bug.cgi?id=32175
        REGRESSION: websocket/tests/url-parsing.html is crashing on Leopard Bot

        * platform/network/cf/SocketStreamHandleCFNet.cpp:
        (WebCore::SocketStreamHandle::readStreamCallback): Call platformClose() to unschedule both
        streams, guaranteeing that there will be no callbacks after SocketStreamHandle is destroyed.
        (WebCore::SocketStreamHandle::writeStreamCallback): Edited a comment a bit.



git-svn-id: svn://svn.chromium.org/blink/trunk@51732 bbb929c8-8fbe-4397-9dbb-9b2b20218538