third_party/WebKit/WebCore/platform/network/cf/SocketStreamHandleCFNet.cpp
@@ -530,7 +530,7 @@ void SocketStreamHandle::readStreamCallback(CFStreamEventType type)
         break;
     }
     case kCFStreamEventEndEncountered:
-        m_client->didClose(this);
+        platformClose();
         break;
     }
 }
@@ -572,7 +572,7 @@ void SocketStreamHandle::writeStreamCallback(CFStreamEventType type)
         break;
     }
     case kCFStreamEventEndEncountered:
-        // FIXME: Currently, we call didClose from read callback, but these can come independently (e.g. a server can stop listening, but keep sending data).
+        // FIXME: Currently, we handle closing in read callback, but these can come independently (e.g. a server can stop listening, but keep sending data).
         break;
     }
 }
